[package]
name = "mmd"
version = "0.1.0"
edition = "2024"
build = "build.rs"
description = "Multi Monitor Dimming"
repository = "https://github.com/csjune/MMD"

[dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Devices_Display",
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Accessibility",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
winresource = "0.1.31"
